[gd_scene load_steps=4 format=3 uid="uid://bs8l0d7xejs1v"]

[ext_resource type="Script" path="res://UI/menu.gd" id="1_wow6n"]
[ext_resource type="Script" path="res://global.gd" id="2_3hghl"]

[sub_resource type="Theme" id="Theme_t3h58"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wow6n")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_t3h58")
metadata/_edit_use_anchors_ = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
light_mask = 0
visibility_layer = 0
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
size_flags_vertical = 2
bbcode_enabled = true
text = "[center]Speedy Dungeon"
fit_content = true
scroll_active = false
tab_size = 12

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Exit")
text = "Start"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../HBoxContainer/Instructions")
text = "Settings"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Instructions" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../../Settings")
focus_neighbor_right = NodePath("../Login")
focus_neighbor_bottom = NodePath("../Login")
text = "How to Play"

[node name="Login" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Instructions")
text = "Login"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../HBoxContainer/Login")
focus_neighbor_bottom = NodePath("../Play")
text = "Exit"

[node name="Global" type="Node" parent="."]
script = ExtResource("2_3hghl")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Instructions" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
